--- a/css/specific-post.css
+++ b/css/specific-post.css
@@ -1,6 +1,6 @@
 main{
- max-width:850px;
- margin:0px auto;
+    max-width:850px;
+    margin:0px auto;
 }
 h1{
     margin-top:35px;
@@ -12,7 +12,6 @@ h2{
     font-size:1.5em;
     font-weight:bold;
     margin-top:50px;
-    text-decoration: underline;
 }
 h3{
     
@@ -21,22 +20,19 @@ h3{
     font-weight:bold;
     color:var(--subheading-color);
 }
+.post-content{
+    width:85%;
+    margin:0px auto;
+}
 .wp-block-image img {
-    max-width:100%;
+    width:100%;
+    max-width:500px;
     height:auto;
-    margin-top:25px;
+    margin-top:15px;
     margin-bottom:15px;
     cursor:zoom-in
 }    
-.post-content{
-    max-width:85%;
-    margin:0px auto;
-}
-.post-content p{
-    padding-top:0px;
-}
 .featured-image{
-    width: 100%;
     max-width:750px;
     margin:0px auto;
 	height:200px;
@@ -93,7 +89,12 @@ h3{
     transform: scale(1.1);
     color:rgb(113, 0, 0);
 }
-
+/* FOOTER*/
+footer{
+    border-top:1px solid var(--green-color);
+    margin: 0px auto;
+    margin-top:75px;
+}
 /* MEDIA QUERIES */
 
 @media only screen and (min-width:500px){
