--- a/css/specific-post.css
+++ b/css/specific-post.css
@@ -1,35 +1,44 @@
 main{
-    max-width:850px;
+    max-width:700px;
     margin:0px auto;
 }
 h1{
-    margin-top:35px;
-    margin-left:10%;
-    margin-bottom:0px;
+    font-size:2.5em;
+    margin:20px 0px 0px 7%;
 }
 h2{
     font-family:var(--main-font);
-    font-size:1.5em;
-    font-weight:bold;
+    font-size:2em;
     margin-top:50px;
+    color:var(--subheading-color);
+    text-transform: capitalize;
 }
 h3{
-    
-    font-family: var(--serif-font);
-    font-size: 2em;
-    font-weight:bold;
+    font-family: var(--main-font);
+    font-size: 1.4em;
+    font-weight:500;
+    color:rgb(110, 110, 110);
+}
+h4{
+    font-family: var(--main-font);
+    font-size: 1.2em;
     color:var(--subheading-color);
 }
 .post-content{
     width:85%;
     margin:0px auto;
 }
+.post-content p{
+    margin-top:25px;
+    max-width:600px;
+}
 .wp-block-image img {
+    display:block;
     width:100%;
-    max-width:500px;
+    max-width: 500px;
     height:auto;
     margin-top:15px;
-    margin-bottom:15px;
+    margin-bottom:0px;
     cursor:zoom-in
 }    
 .featured-image{
@@ -41,53 +50,63 @@ h3{
     background-repeat: no-repeat;
 }
 .date{
-    margin-left:10%;
+    font-family: var(--main-font);
+    margin-left:7%;
     font-size:0.9em;
-    font-style: italic;
     margin-top:0px;
     margin-bottom:20px;
     color:var(--subheading-color);
 }
-
-/* Image modal for post-images */
-#modal-container{
-    max-width:85%;
-    margin:0px auto;
+/* back link */
+#back-link{
+    display: block;
+    text-decoration: none;
+    font-family: var(--main-font);
+    color:var(--subheading-color);
+    margin-top:25px;
 }
+#back-link:hover{
+    text-decoration: underline;
+}
+.fa-angle-left{
+    margin-right:5px;
+}
+/* Image modal for post-images */
 .post-image-modal{
     position:fixed;
-    width: 80vw;
-    max-width:850px;
-    height:35vh;
-    margin-top:35%;
+    width: 100%;
+    max-width:700px;
+    height:50%;
+    top:25%;
 	background-position: center;
 	background-size: contain;
     background-repeat: no-repeat;
     z-index: 99;
 }
 .image-modal{
-    background-color: rgba(0, 0, 0, 0.85);
+    background-color: rgba(0, 0, 0, 0.905);
     position: fixed;
     top:0;
     right:0;
     bottom:0;
     left:0;
-    z-index:98;
+    z-index:99;
 }
 /* modal closing X */
-
 .fa-times{
-    position: absolute;
-    font-size: 2em;
+    position: fixed;
+    font-size: 3em;
     color:rgb(187, 187, 187);
+    height:50px;
     z-index: 100;
-    right:0;
-    top:0;
     cursor:pointer;
+    top:2%;
+    right:0;
+    bottom:0;
+    left:85vw;
 }
 .fa-times:hover{
-    transform: scale(1.1);
-    color:rgb(113, 0, 0);
+    color:var(--green-color);
 }
 /* FOOTER*/
 footer{
@@ -100,7 +119,7 @@ footer{
 @media only screen and (min-width:500px){
 
     .post-image-modal{
-        margin-top:5%;
+        top:20%;
         height:65vh;
     }
 
@@ -110,10 +129,18 @@ footer{
     .post-image-modal{
         top:15%;
     }
+    .featured-image{
+        height:275px;
+    }
 }
-@media only screen and (min-width:1600px){
-
+@media only screen and (min-width:1200px){
+    .fa-times{
+        left:50vw;
+    }
     .post-image-modal{
-        top:5%;
+        width: 85%;
+        height:85%;
+        top:7%;
+        margin:0px auto;
     }
 }
