--- a/css/global.css
+++ b/css/global.css
@@ -7,7 +7,7 @@
     --dark-brown-color:#130a03;
     --green-color:#49654B;
     --subheading-color:#373737;
-    --dark-gray-icon-color:rgb(28, 28, 28);
+    --dark-gray-color:rgb(28, 28, 28);
     --second-contrast-white-text:rgb(220,220, 220);
     --brown-linear-gradient:linear-gradient(0deg, rgba(68,35,14,1) 13%, rgba(42,21,5,1) 78%);
     --box-shadow:3px 3px 15px rgb(0, 0, 0);
