--- a/css/index.css
+++ b/css/index.css
@@ -6,6 +6,7 @@ main{
 }
 #index-bottom-background{
     position:relative;
+    padding-bottom:75px;
 }
 h3, .fa-chevron-circle-left, .fa-chevron-circle-right ,#posts-carousel, .cta{
     position: relative;
@@ -104,24 +105,27 @@ a{
 }
 .cta{
     font-size: 1.1em;
-    margin-bottom:75px;
+    margin:0 auto;
+    margin-bottom:25px;
+    margin-top:25px;
     box-shadow: 3px 3px 15px #000;
 }
 
 /* posts-carousel, carousel icons  */
-
+#carousel-container{
+    width:100%;
+    height:300px;
+}
 #posts-carousel{
-    max-width:80%;
-    display:grid;
-    grid-template-rows: 1fr 1fr;
-    grid-template-columns: 1fr 1fr;
-    margin:0px auto;
-    margin-top:10px;
-    gap:15px;
+    display:flex;
+    flex-flow:row nowrap;
+    gap:25px;
+    margin-left:25px;
 }
 .post-container{
-    max-width:175px;
+    width:45vw;
     height:225px;
+    margin-top:25px;
     background-color:var(--green-color);
     box-shadow: var(--box-shadow);
     transition:all 0.2s ease-in-out;
