--- a/css/index.css
+++ b/css/index.css
@@ -6,7 +6,7 @@ main{
 }
 #index-bottom-background{
     position:relative;
-    padding-bottom:75px;
+    padding-bottom: 75px;
 }
 h3, .fa-chevron-circle-left, .fa-chevron-circle-right ,#posts-carousel, .cta{
     position: relative;
@@ -105,27 +105,22 @@ a{
 }
 .cta{
     font-size: 1.1em;
-    margin:0 auto;
-    margin-bottom:25px;
-    margin-top:25px;
     box-shadow: 3px 3px 15px #000;
 }
-
 /* posts-carousel, carousel icons  */
-#carousel-container{
-    width:100%;
-    height:300px;
-}
+
 #posts-carousel{
-    display:flex;
-    flex-flow:row nowrap;
-    gap:25px;
-    margin-left:25px;
+    max-width:90%;
+    display:grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    margin:0px auto;
+    margin-top:10px;
+    gap:15px;
 }
 .post-container{
-    width:45vw;
+    max-width:175px;
     height:225px;
-    margin-top:25px;
     background-color:var(--green-color);
     box-shadow: var(--box-shadow);
     transition:all 0.2s ease-in-out;
@@ -198,6 +193,12 @@ a{
         width:70%;
         margin-top:15px;
     }
+    #posts-carousel{
+        max-width:350px;
+    }
+    .post-container{
+        max-width:175px;
+    }
 }
 @media only screen and (min-width:500px){
     h1{
@@ -231,11 +232,6 @@ a{
         max-width:175px;
     }
 }
-/* @media only screen and (min-width:650px){
-    h1{
-        width:50%;
-    }
-} */
 @media only screen and (min-width:700px){
     h1{
         font-size:3.5em;
