--- a/css/specific-post.css
+++ b/css/specific-post.css
@@ -3,12 +3,12 @@ main{
     margin:0px auto;
 }
 h1{
-    font-size:2.5em;
+    font-size:2.2em;
     margin:20px 0px 0px 7%;
 }
 h2{
     font-family:var(--main-font);
-    font-size:2em;
+    font-size:1.8em;
     margin-top:50px;
     color:var(--subheading-color);
     text-transform: capitalize;
@@ -64,6 +64,7 @@ h4{
     font-family: var(--main-font);
     color:var(--subheading-color);
     margin-top:25px;
+    margin-left:15px;
 }
 #back-link:hover{
     text-decoration: underline;
